# pkg-zfs

./: AUTHORS  Makefile.am  Makefile.in  configure  configure.ac  zfs-script-config.sh.in  zfs_config.h.in
cmd/: Makefile.am  Makefile.in
cmd/mount_zfs/: Makefile.in
cmd/sas_switch_id/: Makefile.in
cmd/spl/: Makefile.am  Makefile.in
cmd/splat/: Makefile.am  Makefile.in
cmd/zdb/: Makefile.in
cmd/zfs/: Makefile.in
cmd/zinject/: Makefile.in
cmd/zpios/: Makefile.in
cmd/zpool/: Makefile.in
cmd/zpool_id/: Makefile.am  Makefile.in
cmd/zpool_layout/: Makefile.am  Makefile.in
config/: kernel.m4  user.m4  zfs-build.m4
dracut/: Makefile.in
etc/: Makefile.in
include/: Makefile.in
lib/: Makefile.am  Makefile.in
lib/libavl/: Makefile.in
lib/libcommon/: Makefile.in
lib/libefi/: Makefile.in
lib/libnvpair/: Makefile.in
lib/libshare/: Makefile.in
lib/libspl/: Makefile.in
lib/libspl/asm-generic/: Makefile.in
lib/libspl/asm-i386/: Makefile.in
lib/libspl/asm-x86_64/: Makefile.in
lib/libspl/include/: Makefile.in
lib/libspl/include/ia32/: Makefile.in
lib/libspl/include/ia32/sys/: Makefile.in
lib/libspl/include/rpc/: Makefile.in
lib/libspl/include/sys/: Makefile.in
lib/libspl/include/sys/dktp/: Makefile.in
lib/libspl/include/sys/sysevent/: Makefile.in
lib/libspl/include/util/: Makefile.in
lib/libunicode/: Makefile.in
lib/libuutil/: Makefile.in
lib/libzfs/: Makefile.in
lib/libzpool/: Makefile.in
man/: Makefile.in
module/: Makefile.in
scripts/: Makefile.am  Makefile.in  check.sh
udev/: Makefile.in
(+33 files in other folders)
