# NB: GNU Automake Manual, Chapter 8.3.5: Libtool Convenience Libraries
# These five libraries are intermediary build components.
SUBDIRS = libcommon libspl libavl libefi libshare libunicode

# These four libraries, which are installed as the final build product,
# incorporate the five convenience libraries given above.
SUBDIRS += libuutil libnvpair libzpool libzfs
